# voice-agent-azure-ai-foundry

./: .env.example  LICENSE  README.md  english_friend.py  instructions.md  main.py  pyproject.toml  requirements.txt  unimar_presentation.pptx
