[project]
name = "english-agent"
version = "0.1.0"
description = "Real-time English conversation agent powered by Azure VoiceLive"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-voicelive[aiohttp]>=1.1.0b1",
    "azure-core>=1.32.0",
    "azure-identity>=1.20.0",
    "langdetect>=1.0.9",
    "python-dotenv>=1.0.1",
    "pyaudio>=0.2.14",
]

[project.scripts]
english-agent = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "english_agent.py",
    "english_friend.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "english_agent.py",
    "english_friend.py",
    "README.md",
    "pyproject.toml",
    "install.ps1",
    ".env.example",
]
